--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ before_script:
 
 # Run API & integration test
 script:
-  - grunt test
+  - grunt test --stack --verbose
 #  - grunt coveralls
 #  - node ./qa/testAPI.js
   - node ./qa/testLogin.js
