cfg & layout: v-ft:Inbox -> v-ft:Inbox2

--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -21,7 +21,7 @@ v-s:vedaInfo
   rdf:type v-s:AppInfo;
   rdfs:label "Veda";
   v-s:appUrl "http://localhost:8080/#";
-  v-wf:appInboxUrl "http://localhost:8080/#/v-ft:Inbox";
+  v-wf:appInboxUrl "http://localhost:8080/#/v-ft:Inbox2";
 .
 
 ##################### CLIENT ######################
