--- a/source/dub/mstorage/.project
+++ b/source/dub/mstorage/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>veda-server</name>
+	<name>veda-mstorage</name>
 	<comment></comment>
 	<projects>
 	</projects>
