*qa: *uptime to log

--- a/.travis.yml
+++ b/.travis.yml
@@ -82,7 +82,8 @@ script:
 # Stop deamon and show log
 after_script:
   - start-stop-daemon -Kp $PWD/veda-pid $PWD/veda
-  - grunt coveralls
+  - cat ./uptime.log
+#  - grunt coveralls
   - date    
   - cat $PWD/veda_s.log
   - cat logs/veda-core-_*.log 
