--- a/.travis.yml
+++ b/.travis.yml
@@ -57,9 +57,12 @@ script:
 #  - grunt coveralls
 #  - node ./qa/testAPI.js
 #  - node ./qa/testSendGet.js
+  - node ./qa/testRepeatComplexRoute.js
+  - node ./qa/testNetComplexRoute.js
   - node ./qa/testLogin.js
   - node ./qa/testPerson.js
   - node ./qa/testDrafts.js
+  - node ./qa/testLanguage.js
   - node ./qa/testDeleteAndRecovery.js
   - node ./qa/testRights.js
   - node ./qa/testComment.js
@@ -70,14 +73,13 @@ script:
   - node ./qa/testSearchRangeOfDates.js
   - node ./qa/testAttributiveSearchPerson.js
   - node ./qa/testCreatingNetInterface.js
-  - node ./qa/testRepeatComplexRoute.js
-  - node ./qa/testNetComplexRoute.js
+#  - node ./qa/testRepeatComplexRoute.js
+#  - node ./qa/testNetComplexRoute.js
   - node ./qa/testSimpleNet.js
   - node ./qa/testSimpleNet2.js
   - node ./qa/testSimpleNet3.js
   - node ./qa/testSimpleWorkflow.js
   - node ./qa/testDelegationDocument.js
-  - node ./qa/testLanguage.js
 
 # Stop deamon and show log
 after_script:
