--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,8 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
-  - start-stop-daemon --start --verbose --chdir $PWD --make-pidfile --pidfile $PWD/veda-pid --background --startas /bin/bash -- -c "exec ./veda >> $PWD/veda_s.log 2>&1"
+  #- start-stop-daemon --start --verbose --chdir $PWD --make-pidfile --pidfile $PWD/veda-pid --background --startas /bin/bash -- -c "exec ./veda >> $PWD/veda_s.log 2>&1"
+  - ./control-start.sh
   - sleep 90  # give Web server some time to bind to sockets, load startup data, etc
   - ls  $PWD   
   - ls  $PWD/logs   
