--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ before_script:
   - cat $PWD/logs/veda-mstorage-stderr.log
   - cat $PWD/logs/veda-ttlreader-stderr.log
   - cat $PWD/logs/veda-webserver-stderr.log 
-  - cat $PWD/veda_s.log
+#  - cat $PWD/veda_s.log
   - cat $PWD/logs/veda-core-mstorage_*.log          
   - setsid ./qa/uptime-to-log.sh&
   - cat ./uptime.log
