--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -50,6 +50,12 @@ cfg:NTLMAuthProvider
   rdf:value "http://localhost:8085/" ;
   v-s:deleted "true"^^xsd:boolean ;
 .
+cfg:JournalDMSUrl
+  rdf:type rdfs:Resource ;
+  rdfs:label "DMS journal url" ;
+  rdf:value "http://docflow.mp.local/veda-client-workflow/njrl.html?locale=ru&viewMode=light&" ;
+  v-s:deleted "true"^^xsd:boolean ;
+.
 
 # ----------------- Client settings rights ----------------- #
 
@@ -66,6 +72,7 @@ cfg:ClientSettingsMembership
   v-s:resource cfg:Layout ;
   v-s:resource cfg:Welcome ;
   v-s:resource cfg:NTLMAuthProvider ;
+  v-s:resource cfg:JournalDMS ;
   rdfs:label "Client settings membership"@en ;
   rdfs:label "Принадлежность группе настроек клиента"@ru ;
 .
