--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_install:
   - npm install selenium-webdriver@2.47.0
   - npm install -g grunt-cli
   - npm install grunt-contrib-qunit --save-dev
+  - npm install grunt --save-dev
   - npm install coveralls --save-dev
   - npm install grunt-coveralls --save-dev
 
