--- a/.travis.yml
+++ b/.travis.yml
@@ -72,6 +72,7 @@ script:
   - node ./qa/testSearchRangeOfDates.js
   - node ./qa/testAttributiveSearchPerson.js
   - node ./qa/testCreatingNetInterface.js
+  - nide ./qa/testInbox.js
   - node ./qa/testRepeatComplexRoute.js
   - node ./qa/testNetComplexRoute.js
   - node ./qa/testSimpleNet.js
