external users layout

--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -44,6 +44,18 @@ cfg:Welcome
   rdfs:label "Welcome individual"@en ;
   rdf:value v-l:Welcome ;
 .
+cfg:LayoutExternal
+  rdf:type rdfs:Resource ;
+  rdfs:label "Индивид главной страницы приложения"@ru ;
+  rdfs:label "Main page individual"@en ;
+  rdf:value v-l:Main ;
+.
+cfg:WelcomeExternal
+  rdf:type rdfs:Resource ;
+  rdfs:label "Индивид приветствия"@ru ;
+  rdfs:label "Welcome individual"@en ;
+  rdf:value v-l:Welcome ;
+.
 cfg:NTLMAuthProvider
   rdf:type rdfs:Resource ;
   rdfs:label "NTLM authentication provider" ;
