--- a/.travis.yml
+++ b/.travis.yml
@@ -79,7 +79,7 @@ script:
   - node ./qa/testSimpleNet2.js
   - node ./qa/testSimpleNet3.js
   - node ./qa/testSimpleWorkflow.js
-  - node ./qa/testDelegationDocument.js
+#  - node ./qa/testDelegationDocument.js
 
 # Stop deamon and show log
 after_script:
