add cfg:low_priority_user cfg:ImportDMSToVeda to standart config

--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -114,6 +114,7 @@ cfg:standart_node
   v-s:checktime_onto_files "30"^^xsd:integer ;
   v-s:listener cfg:conn_http;
   rdfs:label "Стандартная конфигурация" ;
+  cfg:low_priority_user cfg:ImportDMSToVeda ;
 .
 
 cfg:test_node
