--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -26,6 +26,11 @@ v-s:vedaInfo
 
 ##################### CLIENT ######################
 
+cfg:ClientUpdateServiceAddress
+  rdf:type rdfs:Resource ;
+  rdfs:label "Client update service address" ;
+  rdf:value "ws://localhost:8088/ccus"^^xsd:string ;
+.
 cfg:jasperServerAddress
   rdf:type rdfs:Resource ;
   rdfs:label "JasperServer address"@en ;
@@ -79,6 +84,7 @@ cfg:ClientSettings
 cfg:ClientSettingsMembership
   rdf:type v-s:Membership ;
   v-s:memberOf cfg:ClientSettings ;
+  v-s:resource cfg:ClientUpdateServiceAddress ;
   v-s:resource cfg:OntoVsn ;
   v-s:resource cfg:jasperServerAddress ;
   v-s:resource cfg:Layout ;
