--- a/.travis.yml
+++ b/.travis.yml
@@ -80,6 +80,7 @@ script:
 #  - node ./qa/testSimpleNet3.js
 #  - node ./qa/testSimpleWorkflow.js
   - node ./qa/testDelegationDocument.js
+  - node ./qa/testDelegationTask.js
 
 # Stop deamon and show log
 after_script:
