--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -89,6 +89,8 @@ cfg:ClientSettingsMembership
   v-s:resource cfg:jasperServerAddress ;
   v-s:resource cfg:Layout ;
   v-s:resource cfg:Welcome ;
+  v-s:resource cfg:LayoutExternal ;
+  v-s:resource cfg:WelcomeExternal ;
   v-s:resource cfg:NTLMAuthProvider ;
   v-s:resource cfg:JournalDMS ;
   rdfs:label "Client settings membership"@en ;
