--- a/.travis.yml
+++ b/.travis.yml
@@ -49,9 +49,9 @@ before_script:
 #  - cat $PWD/logs/veda-ttlreader-stderr.log
 #  - cat $PWD/logs/veda-webserver-stderr.log 
 #  - cat $PWD/veda_s.log
-  - cat $PWD/logs/veda-core-mstorage_*.log          
-  - setsid ./qa/uptime-to-log.sh&
-  - cat ./uptime.log
+#  - cat $PWD/logs/veda-core-mstorage_*.log          
+#  - setsid ./qa/uptime-to-log.sh&
+#  - cat ./uptime.log
 
 # Run API & integration test
 script:
