--- a/.travis.yml
+++ b/.travis.yml
@@ -59,28 +59,28 @@ script:
 #  - grunt coveralls
 #  - node ./qa/testAPI.js
 #  - node ./qa/testSendGet.js
-  - node ./qa/testLogin.js
-  - node ./qa/testDrafts.js
-  - node ./qa/testLanguage.js
-  - node ./qa/testDeleteAndRecovery.js
-  - node ./qa/testRights.js
+#  - node ./qa/testLogin.js
+#  - node ./qa/testDrafts.js
+#  - node ./qa/testLanguage.js
+#  - node ./qa/testDeleteAndRecovery.js
+#  - node ./qa/testRights.js
   - node ./qa/testComment.js
   - node ./qa/testVersionedDocument.js
   - node ./qa/testJournal.js
-  - node ./qa/testAttachment.js
-  - node ./qa/testPager.js
-  - node ./qa/testSearchRangeOfDates.js
-  - node ./qa/testAttributiveSearchPerson.js
-  - node ./qa/testCreatingNetInterface.js
-  - node ./qa/testInbox.js
-  - node ./qa/testRepeatComplexRoute.js
+#  - node ./qa/testAttachment.js
+#  - node ./qa/testPager.js
+#  - node ./qa/testSearchRangeOfDates.js
+#  - node ./qa/testAttributiveSearchPerson.js
+#  - node ./qa/testCreatingNetInterface.js
+#  - node ./qa/testInbox.js
+#  - node ./qa/testRepeatComplexRoute.js
 #  - node ./qa/testNetComplexRoute.js
   - node ./qa/testSimpleNet.js
   - node ./qa/testSimpleNet2.js
   - node ./qa/testSimpleNet3.js
   - node ./qa/testSimpleWorkflow.js
-  - node ./qa/testDelegationDocument.js
-  - node ./qa/testDelegationTask.js
+#  - node ./qa/testDelegationDocument.js
+#  - node ./qa/testDelegationTask.js
 
 # Stop deamon and show log
 after_script:
