--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,7 @@ script:
   - node ./qa/testCreatingNetInterface.js
   - node ./qa/testInbox.js
   - node ./qa/testRepeatComplexRoute.js
-#  - node ./qa/testNetComplexRoute.js
+  - node ./qa/testNetComplexRoute.js
   - node ./qa/testSimpleNet.js
   - node ./qa/testSimpleNet2.js
   - node ./qa/testSimpleNet3.js
