--- a/.travis.yml
+++ b/.travis.yml
@@ -36,16 +36,16 @@ before_script:
   - sleep 3 # give xvfb some time to start
   - ./control-start.sh
   - sleep 180  # give Web server some time to bind to sockets, load startup data, etc
-  - grunt test --stack --verbose
+  - grunt test --stack --verbose>>logs/tests.log
+  - node ./qa/testLogin.js>>logs/testLogin.log
+  - node ./qa/testDrafts.js>>logs/testDrafts.log
+  - node ./qa/testLanguage.js>>logs/testLanguage.log
 
 # Run API & integration test
 script:
 #  - grunt coveralls
 #  - node ./qa/testAPI.js
 #  - node ./qa/testSendGet.js
-#  - node ./qa/testLogin.js
-  - node ./qa/testDrafts.js
-  - node ./qa/testLanguage.js
   - node ./qa/testDeleteAndRecovery.js
   - node ./qa/testRights.js
   - node ./qa/testComment.js
