--- a/.travis.yml
+++ b/.travis.yml
@@ -37,25 +37,20 @@ before_script:
   - ./control-start.sh
   - sleep 180  # give Web server some time to bind to sockets, load startup data, etc
   - grunt test --stack --verbose>>logs/tests.log
-  - node ./qa/testLogin.js>>logs/testLogin.log
-  - node ./qa/testDrafts.js>>logs/testDrafts.log
-  - node ./qa/testLanguage.js>>logs/testLanguage.log
-
-# Run API & integration test
-script:
-#  - grunt coveralls
-#  - node ./qa/testAPI.js
-#  - node ./qa/testSendGet.js
-  - node ./qa/testDeleteAndRecovery.js
-  - node ./qa/testRights.js
-  - node ./qa/testComment.js
-  - node ./qa/testVersionedDocument.js
-  - node ./qa/testJournal.js
-  - node ./qa/testAttachment.js
-  - node ./qa/testPager.js
-  - node ./qa/testSearchRangeOfDates.js
-  - node ./qa/testAttributiveSearchPerson.js
-  - node ./qa/testCreatingNetInterface.js
+  - node node ./qa/testLogin.js>>logs/testLogin.log
+  - node ./qa/testAPI.js
+  - travis_wait 20 node ./qa/testDrafts.js
+  - travis_wait 20 node ./qa/testLanguage.js
+  - travis_wait 20 node ./qa/testDeleteAndRecovery.js
+  - travis_wait 20 node ./qa/testRights.js
+  - travis_wait 20 node ./qa/testComment.js
+  - travis_wait 20 node ./qa/testVersionedDocument.js
+  - travis_wait 20 node ./qa/testJournal.js
+  - travis_wait 20 node ./qa/testAttachment.js
+  - travis_wait 20 node ./qa/testPager.js
+  - travis_wait 20 node ./qa/testSearchRangeOfDates.js
+  - travis_wait 20 node ./qa/testAttributiveSearchPerson.js
+  - travis_wait 20 node ./qa/testCreatingNetInterface.js
   - travis_wait 20 node ./qa/testInbox.js
   - travis_wait 20 node ./qa/testRepeatComplexRoute.js
   - travis_wait 20 node ./qa/testNetComplexRoute.js
@@ -64,6 +59,30 @@ script:
   - travis_wait 20 node ./qa/testSimpleNet3.js
   - travis_wait 20 node ./qa/testSimpleWorkflow.js
   - travis_wait 20 node ./qa/testDelegationDocument.js
+
+# Run API & integration test
+script:
+#  - grunt coveralls
+#  - node ./qa/testAPI.js
+#  - node ./qa/testSendGet.js
+#  - node ./qa/testDeleteAndRecovery.js
+#  - node ./qa/testRights.js
+#  - node ./qa/testComment.js
+#  - node ./qa/testVersionedDocument.js
+#  - node ./qa/testJournal.js
+#  - node ./qa/testAttachment.js
+#  - node ./qa/testPager.js
+#  - node ./qa/testSearchRangeOfDates.js
+#  - node ./qa/testAttributiveSearchPerson.js
+#  - node ./qa/testCreatingNetInterface.js
+#  - travis_wait 20 node ./qa/testInbox.js
+#  - travis_wait 20 node ./qa/testRepeatComplexRoute.js
+#  - travis_wait 20 node ./qa/testNetComplexRoute.js
+#  - travis_wait 20 node ./qa/testSimpleNet.js
+#  - travis_wait 20 node ./qa/testSimpleNet2.js
+#  - travis_wait 20 node ./qa/testSimpleNet3.js
+#  - travis_wait 20 node ./qa/testSimpleWorkflow.js
+#  - travis_wait 20 node ./qa/testDelegationDocument.js
 #  - node ./qa/testDelegationTask.js
 
 # Stop deamon and show log
