*QA: limit 50 min

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,11 +39,12 @@ before_script:
   - sleep 3 # give xvfb some time to start
   - ./control-start.sh
   - sleep 180  # give Web server some time to bind to sockets, load startup data, etc
-  - grunt test --stack --verbose
+  - sudo date --set "15:01:00"
   - date
 
 # Run API & integration test
 script:
+  - grunt test --stack --verbose
 # - grunt coveralls
 #  - node ./qa/testAPI.js
   - node ./qa/testLogin.js
