--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ script:
   - grunt test --stack --verbose
 # - grunt coveralls
 #  - node ./qa/testAPI.js
-  - node ./qa/testLogin.js
+#  - node ./qa/testLogin.js
   - node ./qa/testDeleteAndRecovery.js
   - node ./qa/testRights.js
   - node ./qa/testComment.js
