--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ script:
   - node ./qa/testSimpleNet.js
   - node ./qa/testSimpleNet2.js
   - node ./qa/testSimpleNet3.js
-#  - node ./qa/testSimpleWorkflow.js
+  - node ./qa/testSimpleWorkflow.js
 #  - node ./qa/testDelegationDocument.js
 #  - node ./qa/testDelegationTask.js
 
