--- a/.travis.yml
+++ b/.travis.yml
@@ -56,8 +56,8 @@ script:
   - node ./qa/testAttributiveSearchPerson.js
   - node ./qa/testCreatingNetInterface.js
   - travis_wait 20 node ./qa/testInbox.js
-#  - travis_wait 20 node ./qa/testRepeatComplexRoute.js
-#  - travis_wait 20 node ./qa/testNetComplexRoute.js
+  - travis_wait 20 node ./qa/testRepeatComplexRoute.js
+  - travis_wait 20 node ./qa/testNetComplexRoute.js
 #  - node ./qa/testSimpleNet.js
 #  - node ./qa/testSimpleNet2.js
 #  - node ./qa/testSimpleNet3.js
