--- a/.travis.yml
+++ b/.travis.yml
@@ -32,9 +32,9 @@ install:
 
 # Run service as daemon and GUI
 before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+  #- "export DISPLAY=:99.0"
+  #- "sh -e /etc/init.d/xvfb start"
+  #- sleep 3 # give xvfb some time to start
   - ./control-start.sh
   - sleep 120  # give Web server some time to bind to sockets, load startup data, etc
   - date
