--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ before_install:
   - npm install -g grunt-cli
   - npm install grunt-contrib-qunit --save-dev
   - npm install grunt --save-dev
-  - npm install coveralls --save-dev
-  - npm install grunt-coveralls --save-dev
+#  - npm install coveralls --save-dev
+#  - npm install grunt-coveralls --save-dev
 
 # Build
 install:
