--- a/.travis.yml
+++ b/.travis.yml
@@ -45,22 +45,22 @@ script:
 # - grunt coveralls
 #  - node ./qa/testAPI.js
 #  - node ./qa/testLogin.js
-  - node ./qa/testDeleteAndRecovery.js
-  - node ./qa/testRights.js
-  - node ./qa/testComment.js
-  - node ./qa/testVersionedDocument.js
-  - node ./qa/testAttachment.js
-  - node ./qa/testPager.js
-  - node ./qa/testSearchRangeOfDates.js
-  - node ./qa/testAttributiveSearchPerson.js
-  - node ./qa/testJournal.js
-  - node ./qa/testCreatingNetInterface.js
-  - node ./qa/testSimpleNet.js
-  - node ./qa/testSimpleNet2.js
-  - node ./qa/testSimpleNet3.js
-  - node ./qa/testSimpleWorkflow.js
-  - travis_wait 20 node ./qa/testInbox.js
-  - travis_wait 20 node ./qa/testRepeatComplexRoute.js
+#  - node ./qa/testDeleteAndRecovery.js
+#  - node ./qa/testRights.js
+#  - node ./qa/testComment.js
+#  - node ./qa/testVersionedDocument.js
+#  - node ./qa/testAttachment.js
+#  - node ./qa/testPager.js
+#  - node ./qa/testSearchRangeOfDates.js
+#  - node ./qa/testAttributiveSearchPerson.js
+#  - node ./qa/testJournal.js
+#  - node ./qa/testCreatingNetInterface.js
+#  - node ./qa/testSimpleNet.js
+#  - node ./qa/testSimpleNet2.js
+##  - node ./qa/testSimpleNet3.js
+#  - node ./qa/testSimpleWorkflow.js
+#  - travis_wait 20 node ./qa/testInbox.js
+#  - travis_wait 20 node ./qa/testRepeatComplexRoute.js
   - travis_wait 20 node ./qa/testNetComplexRoute.js
   - node ./qa/testDelegationDocument.js
   - node ./qa/testDelegationTask.js
