client init before authentication

--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -109,6 +109,7 @@ cfg:ClientSettingsPermission2
   v-s:canRead "true"^^xsd:boolean ;
   v-s:permissionObject cfg:NTLMAuthProvider ;
   v-s:permissionObject cfg:OntoVsn ;
+  v-s:permissionObject cfg:OntologyGroup ;
   v-s:permissionSubject cfg:Guest ;
   rdfs:label "Client settings permission 3"@en ;
   rdfs:label "Запись о выдаче прав для настроек клиента, 3"@ru ;
