--- a/.travis.yml
+++ b/.travis.yml
@@ -58,12 +58,12 @@ script:
   - node ./qa/testSimpleNet.js
   - node ./qa/testSimpleNet2.js
   - node ./qa/testSimpleNet3.js
-  - node ./qa/testSimpleWorkflow.js
-  - travis_wait 20 node ./qa/testInbox.js
-  - travis_wait 20 node ./qa/testRepeatComplexRoute.js
-  - travis_wait 20 node ./qa/testNetComplexRoute.js
-  - node ./qa/testDelegationDocument.js
-  - node ./qa/testDelegationTask.js
+#  - node ./qa/testSimpleWorkflow.js
+#  - travis_wait 20 node ./qa/testInbox.js
+#  - travis_wait 20 node ./qa/testRepeatComplexRoute.js
+#  - travis_wait 20 node ./qa/testNetComplexRoute.js
+#  - node ./qa/testDelegationDocument.js
+#  - node ./qa/testDelegationTask.js
 
 # Stop deamon and show log
 after_script:
