cherry pick from tarantool branch

--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -109,6 +109,19 @@ cfg:ClientSettingsPermission2
   v-s:permissionObject cfg:NTLMAuthProvider ;
   v-s:permissionObject cfg:OntoVsn ;
   v-s:permissionObject cfg:OntologyGroup ;
+  v-s:permissionObject v-ui:AvailableLanguage ;
+  v-s:permissionObject v-ui:DefaultLanguage ;
+  v-s:permissionObject v-ui:EN ;
+  v-s:permissionObject v-ui:RU ;
+  v-s:permissionObject cfg:Guest ;
+  v-s:permissionSubject cfg:Guest ;
+  rdfs:label "Client settings permission 2"@en ;
+  rdfs:label "Запись о выдаче прав для настроек клиента 2"@ru ;
+.
+cfg:ClientSettingsPermission3
+  rdf:type v-s:PermissionStatement ;
+  v-s:canCreate "true"^^xsd:boolean ;
+  v-s:permissionObject v-s:RegistrationRequest ;
   v-s:permissionSubject cfg:Guest ;
   rdfs:label "Client settings permission 3"@en ;
   rdfs:label "Запись о выдаче прав для настроек клиента, 3"@ru ;
