--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ before_script:
 
 # Run API & integration test
 script:
-  - travis_wait 20 grunt test --stack --verbose
+#  - travis_wait 20 grunt test --stack --verbose
 # - grunt coveralls
 #  - node ./qa/testAPI.js
   - travis_wait 20  node ./qa/testLogin.js
@@ -60,6 +60,7 @@ script:
   - node ./qa/testSimpleNet.js
   - node ./qa/testSimpleNet2.js
   - node ./qa/testSimpleNet3.js
+  - travis_wait 20 grunt test --stack --verbose
 
 # Stop deamon and show log
 after_script:
