--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ before_script:
 script:
 #  - travis_wait 20 grunt test --stack --verbose
 # - grunt coveralls
-#  - node ./qa/testAPI.js
+  - node ./qa/testAPI.js
   - travis_wait 20  node ./qa/testLogin.js
   - node ./qa/testDeleteAndRecovery.js
   - node ./qa/testRights.js
@@ -60,7 +60,6 @@ script:
   - node ./qa/testSimpleNet.js
   - node ./qa/testSimpleNet2.js
   - node ./qa/testSimpleNet3.js
-  - travis_wait 20 grunt test --stack --verbose
 
 # Stop deamon and show log
 after_script:
