--- a/veda.properties
+++ b/veda.properties
@@ -1,11 +1,9 @@
 node_id = cfg:standart_node
 notify_channel_url = tcp://127.0.0.1:9111
 ft_query_url=127.0.0.1:11112
-tarantool_url = 127.0.0.1:9999
+#tarantool_url = 127.0.0.1:9999
 main_module_url = tcp://127.0.0.1:9112
 http_port=8080
 https_port=8020
 use_https=false
-lmdb_mode=as_library
 #acl_service_url=tcp://127.0.0.1:22000
-#lmdb_mode=as_server
