core: autorization: add MDBX

--- a/veda.properties
+++ b/veda.properties
@@ -7,3 +7,4 @@ use_https=false
 #tarantool_url = 127.0.0.1:3309
 acl_service_url=tcp://127.0.0.1:22000
 ft_query_service_url=127.0.0.1:23000
+authorization_db_type=lmdb
