--- a/veda.properties
+++ b/veda.properties
@@ -8,4 +8,5 @@ use_https=false
 acl_service_url=tcp://127.0.0.1:22000
 ft_query_service_url=127.0.0.1:23000
 authorization_db_type=lmdb
+#authorization_cache_size=10000
 go_http_port=8081
