server: c++: msgpack8json: upd 3

--- a/source/lib64/ext-lib-bind-src/v8_d/Makefile
+++ b/source/lib64/ext-lib-bind-src/v8_d/Makefile
@@ -1,10 +1,10 @@
 CC=g++
 INCLUDES=`pkg-config --cflags msgpack`
 LIBS=`pkg-config --libs msgpack`
-CFLAGS=$(INCLUDES) $(LIBS) -std=c++03 -c -Wl,--start-group
+CFLAGS=$(INCLUDES) $(LIBS) -g -std=c++03 -c -Wl,--start-group
 
 all:
-	g++ $(CFLAGS) cbor.cpp util8json.cpp msgpack8json.cpp cbor8json.cpp v8d.cc    
+	g++ $(CFLAGS) hints.c msgpuck.c cbor.cpp util8json.cpp msgpack8json.cpp cbor8json.cpp v8d.cc    
 	ar rvs libv8d.a *.o
 	rm *.o
 	mv libv8d.a ../../
