server: msgpack: upd

--- a/veda.properties
+++ b/veda.properties
@@ -10,3 +10,4 @@ ft_query_service_url=127.0.0.1:23000
 authorization_db_type=lmdb
 #authorization_cache_size=10000
 go_http_port=8081
+binobj_format=cbor
