ignore symlinked projects

--- a/ontology/.gitignore
+++ b/ontology/.gitignore
@@ -8,3 +8,7 @@
 /veda-module-net-complex-route
 /veda-module-net-universal
 /veda-site
+/common-dictionaries
+/module-net-basic
+/module-net-complex-route
+/module-net-universal
