*server: lib authorization: change MDB dependency

--- a/source/authorization/Cargo.toml
+++ b/source/authorization/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["staticlib"]
     
 [dependencies]
 lazy_static = "1.0"
-lmdb-rs = "0.7.6"
+lmdb-rs-m = "0.7.6"
 #libc = "0.2"
 #chrono = "0.3"
 #juniper = "0.8.1"
