*server: lib authorization: add generate h file

--- a/source/authorization/Cargo.toml
+++ b/source/authorization/Cargo.toml
@@ -2,6 +2,7 @@
 name = "authorization"
 version = "0.1.0"
 authors = ["itiu <ValeriyBushenev@gmail.com>", "muller95 <muller95@yandex.ru>"]
+#build = "build.rs"
 
 [lib]
 name = "authorization"
@@ -11,6 +12,7 @@ crate-type = ["staticlib"]
 [dependencies]
 lazy_static = "1.0"
 lmdb-rs-m = "0.7.6"
-#libc = "0.2"
-#chrono = "0.3"
-#juniper = "0.8.1"
+
+#[build-dependencies]
+#cbindgen = "0.1"
+
