--- a/veda.properties
+++ b/veda.properties
@@ -5,9 +5,11 @@ http_port=8080
 https_port=8020
 use_https=false
 #tarantool_url = 127.0.0.1:3309
-acl_service_url=tcp://127.0.0.1:22000
+#acl_service_url=tcp://127.0.0.1:22000
 ft_query_service_url=127.0.0.1:23000
 authorization_db_type=lmdb
 #authorization_cache_size=10000
+#authorization_lib=embeded
+authorization_lib=external
 go_http_port=8081
 binobj_format=cbor
