--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: trusty
+dist: xenial
 sudo: required
 
 language: node_js
@@ -9,7 +9,8 @@ before_install:
   - stty cols 80
   - sudo apt-get install curl
   - sudo apt-get install nodejs-legacy
-  - ./control-install.sh&>install.log    
+  - ./control-install.sh 
+#&>install.log    
   - dub -v fetch vibe-d --version=0.7.30
 
 addons:
