--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ addons:
 # Build
 install:
   - ./control-install.sh 
-  - export PATH=$PATH:$HOME/.cargo
+  - source $HOME/.cargo/env
 #&>install.log    
   - dub -v fetch vibe-d --version=0.7.30
 #  - npm install --save-dev testcafe-browser-provider-saucelabs
