--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ node_js: "stable"
 before_install:
   - stty cols 80
   - sudo apt-get install nodejs-legacy
+  - npm install -g grunt-cli
+  - npm install grunt-contrib-qunit --save-dev
+  - npm install grunt --save-dev
 
 addons:
 #  firefox: latest
@@ -21,9 +24,8 @@ addons:
 
 # Build
 install:
-  - ./control-install.sh 
+  - ./control-install.sh&>install.log 
   - source $HOME/.cargo/env
-#&>install.log    
   - dub -v fetch vibe-d --version=0.7.30
 #  - npm install --save-dev testcafe-browser-provider-saucelabs
   - npm install --save-dev testcafe
