--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,8 @@ script:
   - testcafe chromium qa/testcafe/testRights.js
   - testcafe chromium qa/testcafe/testSearchRangeOfDates.js
   - testcafe chromium qa/testcafe/testVersionedDocument.js
+  - testcafe chromium qa/testcafe/testSimpleNet.js
+  - testcafe chromium qa/testcafe/testSimpleNet2.js  
 
 after_script:
   - ./control-stop.sh
