--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,7 @@ script:
   - testcafe chromium qa/testcafe/testVersionedDocument.js
   - testcafe chromium qa/testcafe/testSimpleNet.js
   - testcafe chromium qa/testcafe/testSimpleNet2.js  
+  - testcafe chromium qa/testcafe/testSimpleNet3.js  
 
 after_script:
   - ./control-stop.sh
