--- a/ontology/config.ttl.cfg
+++ b/ontology/config.ttl.cfg
@@ -5,7 +5,6 @@
 @prefix v-wf: <http://semantic-machines.com/veda/veda-workflow/> .
 @prefix v-s: <http://semantic-machines.com/veda/veda-schema/> .
 @prefix v-ui: <http://semantic-machines.com/veda/veda-ui/> .
-@prefix v-l: <http://semantic-machines.com/veda/veda-layout/> .
 @prefix cfg: <http://semantic-machines.com/veda/config/> .
 
 <http://semantic-machines.com/veda/config>
@@ -40,25 +39,25 @@ cfg:Layout
   rdf:type rdfs:Resource ;
   rdfs:label "Индивид главной страницы приложения"@ru ;
   rdfs:label "Main page individual"@en ;
-  rdf:value v-l:Main ;
+  rdf:value v-s:Main ;
 .
 cfg:Welcome
   rdf:type rdfs:Resource ;
   rdfs:label "Индивид приветствия"@ru ;
   rdfs:label "Welcome individual"@en ;
-  rdf:value v-l:Welcome ;
+  rdf:value v-s:Welcome ;
 .
 cfg:LayoutExternal
   rdf:type rdfs:Resource ;
   rdfs:label "Индивид главной страницы приложения"@ru ;
   rdfs:label "Main page individual"@en ;
-  rdf:value v-l:Main ;
+  rdf:value v-s:Main ;
 .
 cfg:WelcomeExternal
   rdf:type rdfs:Resource ;
   rdfs:label "Индивид приветствия"@ru ;
   rdfs:label "Welcome individual"@en ;
-  rdf:value v-l:Welcome ;
+  rdf:value v-s:Welcome ;
 .
 cfg:NTLMAuthProvider
   rdf:type rdfs:Resource ;
