--- a/veda.properties
+++ b/veda.properties
@@ -7,5 +7,5 @@ use_https=false
 #tarantool_url=127.0.0.1:3309
 ft_query_service_url=127.0.0.1:23000
 go_http_port=8080
-#binobj_format=msgpack
-binobj_format=cbor
+binobj_format=msgpack
+#binobj_format=cbor
