server: set mode: tarantool+msgpack

--- a/veda.properties
+++ b/veda.properties
@@ -4,7 +4,7 @@ main_module_url = tcp://127.0.0.1:9112
 http_port=8080
 https_port=8020
 use_https=false
-#tarantool_url=127.0.0.1:3309
+tarantool_url=127.0.0.1:3309
 ft_query_service_url=127.0.0.1:23000
 go_http_port=8080
 binobj_format=msgpack
