server: upd, veda-properties

--- a/veda.properties
+++ b/veda.properties
@@ -9,4 +9,5 @@ ft_query_service_url=127.0.0.1:23000
 go_http_port=8080
 binobj_format=msgpack
 #binobj_format=cbor
-modules=veda-ft-indexer,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ft-query,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-webserver
+input_queue_path=input/queue
+modules=veda-ft-indexer,veda-fanout-email,veda-fanout-sql-lp,veda-fanout-sql-np,veda-ft-query,veda-ltr-scripts,veda-scripts-lp,veda-scripts-main,veda-ccus,veda-webserver,veda-ttlreader
